--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -21,7 +21,7 @@
 <!-- Material Design Bootstrap -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
   <!-- Custom Styles -->
-<link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -108,7 +108,8 @@
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
 
-<script src="main.js"></script>
+<script type=text/javascript src="{{
+    url_for('static', filename='js/main.js') }}"></script>
   
 </body>
 </html>
