--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="PES 6, pes6,PES2014, pes retro, pesretro, pes6es, wlpes, pes2021, sofifa, stats convert, conversor de habilidades, stats sofifa to pes, fabvitor, fabvitor pes, robimex, pesmaster, pes master">
-  <meta name="pesmaster" content="Stats Convert created by fabvitor">
-  <meta name="description" content="Conversor de Habilidades do Pes2021 para o PES6 e PES2014 PC e PS2, criado por fabvitor">
-  <title>PesMaster Stats Convert by Fábio Vitor</title>
+  <meta name="keywords" content="Brasil, brasileirao, Seriea, Tabela, Flamengo, Clássicacão, PES 6, pes6,PES2014, pes retro, pesretro, pes6es, wlpes, pes2021, sofifa, stats convert, conversor de habilidades, stats sofifa to pes, fabvitor, fabvitor pes, robimex, pesmaster, pes master">
+  <meta name="Brasileirão" content="Tabela Do Campeonato Brasileiro">
+  <meta name="description" content="Api E Site Com Dados Da Classificação Do Campeonato Brasileiro">
+  <title>Tabela do Brasileirão por Fábio Vitor</title>
   
   <!-- HTML -->
   
@@ -29,7 +29,7 @@
   <div class="row justify-content-center my-2 special-color-dark">
     <div class="col-md-9 special-color-dark">
     <div class="jumbotron">
-    <h2 class="text-center">Tabela do Campeonato Brasileiro</h2>
+    <h2 class="text-center">Tabela do Brasileirão</h2>
     <p class="text-center">por: Fábio Vitor</strong></p>
   </div> </div> </div>
 <div class="table-responsive">
