--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -86,7 +86,7 @@
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://FVitor7.github.io/"> Portfólio</a>
+    <a href="https://FVitor7.github.io/"> Fábio Vitor</a>
   </div>
   <!-- Copyright -->
 
